# services/authorization-service/src/authz_service/api/generated/dependencies.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2026-09-20T20:48:07+00:00
+#   timestamp: 2026-09-22T10:20:20+00:00
 
 from typing import Union
 
@@ -9,6 +9,7 @@ from .models import (
     DidAttachRequest,
     DidCreateRequest,
     DidDetachRequest,
+    HealthStatus,
     PrivilegedOperationRequest,
     Problem,
     ProtocolCreateRequest,
