# services/authorization-service/src/authz_service/api/generated/models.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2026-09-20T20:48:07+00:00
+#   timestamp: 2026-09-22T10:20:20+00:00
 
 from __future__ import annotations
 
@@ -231,6 +231,14 @@ class PrivilegedOperationRequest(BaseModel):
         examples=["add_account", "add_scope", "approve_rule"],
     )
     context: Context
+
+
+class Status(StrEnum):
+    ok = "ok"
+
+
+class HealthStatus(BaseModel):
+    status: Status
 
 
 class Policy(BaseModel):
