# services/authorization-service/src/authz_service/api/generated/routers/operations.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2026-09-20T20:48:07+00:00
+#   timestamp: 2026-09-22T10:20:20+00:00
 
 from __future__ import annotations
 
@@ -11,8 +11,13 @@ from ..dependencies import *
 router = APIRouter(tags=["operations"])
 
 
-@router.get("/healthz", response_model=None, tags=["operations"])
-def get_health() -> None:
+@router.get(
+    "/healthz",
+    response_model=HealthStatus,
+    responses={"503": {"model": Problem}},
+    tags=["operations"],
+)
+def get_health() -> Union[HealthStatus, Problem]:
     """
     Liveness and PDP reachability
     """
